[package]
name = "jdvrif"
version = "7.5.0"
edition = "2021"
description = "JPG Data Vehicle – metadata steganography tool"
authors = ["Nicholas Cleasby (@CleasbyCode)"]

[dependencies]
sodiumoxide = "0.2"
flate2 = "1.0"
turbojpeg = "1.3"
libc = "0.2"
zeroize = { version = "1", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
